website/websites/gp4/code/knucleotide-scala-2.log
BUILD COMMANDS FOR: knucleotide.scala-2.scala

Wed Mar 21 16:02:02 PDT 2007

( if [ ! -d knucleotide.scala-2.scala_run ] ; then mkdir knucleotide.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/knucleotide/knucleotide.scala-2.scala knucleotide.scala-2.scala_run/knucleotide.scala
( cd knucleotide.scala-2.scala_run ; /opt/scala-2.4.0/bin/scalac knucleotide.scala )
knucleotide.scala:93: error: value printf is not a member of object java.io.Console
         Console.printf("{0} {1,number,0.000}\n", a._1, a._2.value / n * 100.0)
                ^
knucleotide.scala:95: error: value println is not a member of object java.io.Console
      Console.println
             ^
knucleotide.scala:102: error: value println is not a member of object java.io.Console
      Console.println(count + "\t" + fragment)
             ^
three errors found
make[3]: [knucleotide.scala-2.scala_run] Error 1 (ignored)
touch knucleotide.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath knucleotide.scala-2.scala_run knucleotide %A
************************************************************
*   TEST (knucleotide.scala-2.scala_run) FAILED - ERROR:  knucleotide.scala-2.scala_out differs from Output.10000
************************************************************
-rw-r--r-- 1 dunham users 245 Dec 29 20:51 Output.10000
-rw-r--r-- 1 dunham users  26 Mar 21 16:02 knucleotide.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: knucleotide
